Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41677

Compilation fails for qtwayland if QT_NO_OPENGL is defined

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.4.0 RC
    • 5.4.0 Alpha
    • QPA: Wayland
    • None

    Description

      If the qtwayland qpa plugin is compiled without OpenGL support, compilation will fail in the client module with:

      In file included from qwaylandshmbackingstore.cpp:41:0:
      qwaylandshmbackingstore_p.h:96:12: error: 'QImage QWaylandShmBackingStore::toImage() const' marked override, but does not override
      QImage toImage() const Q_DECL_OVERRIDE;

      This is due to QPlatformBackingStore::toImage() being guarded by a #ifndef QT_NO_OPENGL but QWaylandShmBackingStore::toImage() assuming OpenGL support.

      The same problem also exists for QWaylandIntegration::createPlatformOpenGLContext (see patch for more information).

      Adding #ifndef QT_NO_OPENGL guards fixes the compilation.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            justmaximumpower Moritz Kühner
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes